--- a/web/css/welcomePage.css
+++ b/web/css/welcomePage.css
@@ -7,7 +7,12 @@
 img {
     width: 100%;
     height: 100%;
-    pointer-events: none;
+    
+}
+input[type="file"] {
+  color: transparent;
+  position:absolute;
+  display: none;
 }
 body {
   font-size: 16px;
