修复了用户发送消息中有尖括号导致json数据解析丢失的bug

--- a/web/css/login.css
+++ b/web/css/login.css
@@ -25,8 +25,7 @@ body{
 
 .absol{
 	position: absolute;
-        left:-1000px;
-        top:-1000px;
+        display:none;
 }
 .button{
 	pointer-events: auto;
