--- a/web/css/Start.css
+++ b/web/css/Start.css
@@ -25,8 +25,7 @@ body{
 
 .absol{
 	position: absolute;
-        left:-1000px;
-        top:-1000px;
+        display:none;
 }
 #score{
     background-color: #ff7800;
