--- a/web/css/welcomePage.css
+++ b/web/css/welcomePage.css
@@ -195,3 +195,11 @@ body {
     margin-bottom: 5px;
     margin-top: 10px;
 }
+
+.container{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #000000;
+}
